pim categories structure updated
